{
  "version": 4,
  "terraform_version": "1.2.6",
  "serial": 638,
  "lineage": "dfd6aadc-3f62-d711-8ec5-cf3e098aa5c8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default_route_table_cms",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656862533084:route-table/rtb-0a779942fa5f3c9c7",
            "default_route_table_id": "rtb-0a779942fa5f3c9c7",
            "id": "rtb-0a779942fa5f3c9c7",
            "owner_id": "656862533084",
            "propagating_vgws": null,
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01cbb63da768ab3a9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ea9873c14bcb31c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.EC2InternetGateway",
            "aws_vpc.EC2VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "EC2InternetGateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656862533084:internet-gateway/igw-01cbb63da768ab3a9",
            "id": "igw-01cbb63da768ab3a9",
            "owner_id": "656862533084",
            "vpc_id": "vpc-0ea9873c14bcb31c8"
          },
          "dependencies": [
            "aws_vpc.EC2VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "ElasticLoadBalancingV2LoadBalancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:656862533084:loadbalancer/app/alb-cms-service/7018b8316f326b36",
            "arn_suffix": "app/alb-cms-service/7018b8316f326b36",
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-cms-service-1153690859.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:656862533084:loadbalancer/app/alb-cms-service/7018b8316f326b36",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-cms-service",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a1a19f7426c8d8e3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04976fde8efd1cdd4"
              },
              {
                "subnet_id": "subnet-0d8eb5b980cbbf506"
              }
            ],
            "subnets": [
              "subnet-04976fde8efd1cdd4",
              "subnet-0d8eb5b980cbbf506"
            ],
            "vpc_id": "vpc-0ea9873c14bcb31c8",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_internet_gateway.EC2InternetGateway",
            "aws_security_group.temp_sg",
            "aws_subnet.EC2Subnet",
            "aws_subnet.EC2Subnet2",
            "aws_vpc.EC2VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "ElasticLoadBalancingV2Listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:656862533084:listener/app/alb-cms-service/7018b8316f326b36/d3626bafdd3452bb",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:656862533084:targetgroup/cms-amce-tg-port/9d94bab8cf62d290",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:656862533084:listener/app/alb-cms-service/7018b8316f326b36/d3626bafdd3452bb",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:656862533084:loadbalancer/app/alb-cms-service/7018b8316f326b36",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.EC2InternetGateway",
            "aws_lb.ElasticLoadBalancingV2LoadBalancer",
            "aws_lb_target_group.ElasticLoadBalancingV2TargetGroup4",
            "aws_security_group.temp_sg",
            "aws_subnet.EC2Subnet",
            "aws_subnet.EC2Subnet2",
            "aws_vpc.EC2VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ElasticLoadBalancingV2TargetGroup",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:656862533084:targetgroup/temp-cms-target-group/5b79873905361c42",
            "arn_suffix": "targetgroup/temp-cms-target-group/5b79873905361c42",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:656862533084:targetgroup/temp-cms-target-group/5b79873905361c42",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "temp-cms-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0ea9873c14bcb31c8"
          },
          "dependencies": [
            "aws_vpc.EC2VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ElasticLoadBalancingV2TargetGroup2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:656862533084:targetgroup/ecs-cms-ac-cmsacmeservice/bc926e3ce6352f04",
            "arn_suffix": "targetgroup/ecs-cms-ac-cmsacmeservice/bc926e3ce6352f04",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/info/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:656862533084:targetgroup/ecs-cms-ac-cmsacmeservice/bc926e3ce6352f04",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-cms-ac-cmsacmeservice",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ea9873c14bcb31c8"
          },
          "dependencies": [
            "aws_vpc.EC2VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ElasticLoadBalancingV2TargetGroup3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:656862533084:targetgroup/ecs-cms-ac-cms-acme-service/739d5d563a1658e9",
            "arn_suffix": "targetgroup/ecs-cms-ac-cms-acme-service/739d5d563a1658e9",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/info/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:656862533084:targetgroup/ecs-cms-ac-cms-acme-service/739d5d563a1658e9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ecs-cms-ac-cms-acme-service",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ea9873c14bcb31c8"
          },
          "dependencies": [
            "aws_vpc.EC2VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "ElasticLoadBalancingV2TargetGroup4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:656862533084:targetgroup/cms-amce-tg-port/9d94bab8cf62d290",
            "arn_suffix": "targetgroup/cms-amce-tg-port/9d94bab8cf62d290",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/info/status",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:656862533084:targetgroup/cms-amce-tg-port/9d94bab8cf62d290",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "cms-amce-tg-port",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ea9873c14bcb31c8"
          },
          "dependencies": [
            "aws_vpc.EC2VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "temp_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656862533084:security-group/sg-0a1a19f7426c8d8e3",
            "description": "temp_sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a1a19f7426c8d8e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "temp_sg",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "temp_sg",
            "name_prefix": "",
            "owner_id": "656862533084",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_tls"
            },
            "tags_all": {
              "Name": "allow_tls"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ea9873c14bcb31c8"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.EC2VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "EC2Subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656862533084:subnet/subnet-0d8eb5b980cbbf506",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8eb5b980cbbf506",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656862533084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ea9873c14bcb31c8"
          },
          "dependencies": [
            "aws_vpc.EC2VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "EC2Subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656862533084:subnet/subnet-04976fde8efd1cdd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04976fde8efd1cdd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "656862533084",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ea9873c14bcb31c8"
          },
          "dependencies": [
            "aws_vpc.EC2VPC"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "EC2VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:656862533084:vpc/vpc-0ea9873c14bcb31c8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-079464d84bcf8f679",
            "default_route_table_id": "rtb-0a779942fa5f3c9c7",
            "default_security_group_id": "sg-0b687a62b2f518647",
            "dhcp_options_id": "dopt-0883a5791a776c23f",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0ea9873c14bcb31c8",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a779942fa5f3c9c7",
            "owner_id": "656862533084"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}